Give example on indexing with batched keys (B x N x d)

--- a/readme_examples.ipynb
+++ b/readme_examples.ipynb
@@ -258,24 +258,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "5328eb51",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1024, 3])\n",
-      "tensor([[ 0.0000, -3.5000,  0.2000],\n",
-      "        [ 0.0000, -4.0000,  0.1000],\n",
-      "        [ 0.0000, -7.0000,  0.5000],\n",
-      "        [ 0.0000,  3.0000,  2.0000]])\n",
-      "tensor([[12.0000, -3.5000,  0.2000],\n",
-      "        [12.0000, -4.0000,  0.1000],\n",
-      "        [12.0000, -7.0000,  0.5000],\n",
-      "        [12.0000,  3.0000,  2.0000]])\n",
-      "tensor([    577,     385,      -1,  ..., 1040769,      -1, 1043597])\n"
+      "torch.Size([256, 4, 1])\n",
+      "torch.Size([256, 4, 3])\n",
+      "tensor([[[ 0.0000, -3.5000,  0.2000],\n",
+      "         [ 0.0000, -4.0000,  0.1000],\n",
+      "         [ 0.0000, -7.0000,  0.5000],\n",
+      "         [ 0.0000,  3.0000,  2.0000]],\n",
+      "\n",
+      "        [[ 1.0000, -3.5000,  0.2000],\n",
+      "         [ 1.0000, -4.0000,  0.1000],\n",
+      "         [ 1.0000, -7.0000,  0.5000],\n",
+      "         [ 1.0000,  3.0000,  2.0000]],\n",
+      "\n",
+      "        [[ 2.0000, -3.5000,  0.2000],\n",
+      "         [ 2.0000, -4.0000,  0.1000],\n",
+      "         [ 2.0000, -7.0000,  0.5000],\n",
+      "         [ 2.0000,  3.0000,  2.0000]],\n",
+      "\n",
+      "        [[ 3.0000, -3.5000,  0.2000],\n",
+      "         [ 3.0000, -4.0000,  0.1000],\n",
+      "         [ 3.0000, -7.0000,  0.5000],\n",
+      "         [ 3.0000,  3.0000,  2.0000]]])\n",
+      "tensor([[[48.0000, -3.5000,  0.2000],\n",
+      "         [48.0000, -4.0000,  0.1000],\n",
+      "         [48.0000, -7.0000,  0.5000],\n",
+      "         [48.0000,  3.0000,  2.0000]],\n",
+      "\n",
+      "        [[49.0000, -3.5000,  0.2000],\n",
+      "         [49.0000, -4.0000,  0.1000],\n",
+      "         [49.0000, -7.0000,  0.5000],\n",
+      "         [49.0000,  3.0000,  2.0000]],\n",
+      "\n",
+      "        [[50.0000, -3.5000,  0.2000],\n",
+      "         [50.0000, -4.0000,  0.1000],\n",
+      "         [50.0000, -7.0000,  0.5000],\n",
+      "         [50.0000,  3.0000,  2.0000]],\n",
+      "\n",
+      "        [[51.0000, -3.5000,  0.2000],\n",
+      "         [51.0000, -4.0000,  0.1000],\n",
+      "         [51.0000, -7.0000,  0.5000],\n",
+      "         [51.0000,  3.0000,  2.0000]]])\n",
+      "tensor([[    577,     385,      -1,    3213],\n",
+      "        [   4673,    4481,      -1,    7309],\n",
+      "        [   8769,    8577,      -1,   11405],\n",
+      "        ...,\n",
+      "        [1032769, 1032577,      -1, 1035405],\n",
+      "        [1036865, 1036673,      -1, 1039501],\n",
+      "        [1040961, 1040769,      -1, 1043597]])\n",
+      "tensor([[    577,     385,      -1,    3213],\n",
+      "        [   4673,    4481,      -1,    7309],\n",
+      "        [   8769,    8577,      -1,   11405],\n",
+      "        ...,\n",
+      "        [1032769, 1032577,      -1, 1035405],\n",
+      "        [1036865, 1036673,      -1, 1039501],\n",
+      "        [1040961, 1040769,      -1, 1043597]])\n"
      ]
     }
    ],
@@ -288,16 +334,22 @@
     "                                    [3, 2]])\n",
     "# number of entries to query\n",
     "N = value_key_per_batch.shape[0]\n",
+    "print(torch.arange(B, dtype=value_key_per_batch.dtype).reshape(B, 1, 1).repeat(1, N, 1).shape)\n",
     "# make the indices for all batches\n",
     "value_key_batch = torch.cat(\n",
-    "    (torch.arange(B, dtype=value_key_per_batch.dtype).repeat_interleave(N).view(-1, 1),\n",
-    "     value_key_per_batch.repeat(B, 1)), dim=1)\n",
-    "print(value_key_batch.shape)  # (B * N, 3)\n",
+    "    (torch.arange(B, dtype=value_key_per_batch.dtype).reshape(B, 1, 1).repeat(1, N, 1),\n",
+    "     value_key_per_batch.repeat(B, 1, 1)), dim=-1)\n",
+    "# keys can have an additional batch indices at the front\n",
+    "print(value_key_batch.shape)  # (B, N, 3)\n",
     "# these 2 should be the same apart from the first batch index\n",
     "print(value_key_batch[0:N])\n",
     "print(value_key_batch[12*N:13*N])\n",
+    "\n",
     "# should see some -1 to indicate invalid value\n",
-    "print(data_batch[value_key_batch]) "
+    "print(data_batch[value_key_batch]) \n",
+    "\n",
+    "# also there is a shorthand for directly using the per batch indices\n",
+    "print(data_batch[value_key_per_batch.repeat(B,1,1)]) # should be the same as above"
    ]
   },
   {
