Document using unbind as builtin syntax for multidim indexing

--- a/readme_examples.ipynb
+++ b/readme_examples.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "f8dad1cb",
    "metadata": {},
    "outputs": [
@@ -207,6 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tensor([   323,   8645, 411117,  12676,  16513])\n",
       "tensor([   323,   8645, 411117,  12676,  16513])\n"
      ]
     }
@@ -214,7 +215,8 @@
    "source": [
     "# easier to convert it to something that allows column indexing first\n",
     "idx4 = torch.tensor(idx3)\n",
-    "print(data[idx4[:,0], idx4[:,1], idx4[:,2]]) # returns the 5 entries as desired"
+    "print(data[idx4[:,0], idx4[:,1], idx4[:,2]]) # returns the 5 entries as desired\n",
+    "print(data[torch.unbind(idx4, -1)])  # can also use unbind"
    ]
   },
   {
